@@ -1,3 +1,8 @@
+2003-12-06  Itamar Shtull-Trauring  <itamar@itamarst.org>
+
+	* twisted/internet/wxreactor.py: Added experimental wxPython reactor,
+	which seems to work better than the twisted.internet.wxsupport.
+
 2003-12-05  Paul Swartz  <z3p@twistedmatrix.com>
 
 	* twisted/conch/ssh/filetransfer.py, session.py: added SFTPv3 support
